Fixed sidebar and logo overlap

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
   display: grid;
   grid-template-columns: 1fr 3fr ;
-  grid-template-rows: 70px auto 50px;
+  grid-template-rows: 80px auto 50px;
 }
 
 .header {
